Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98794

LottieAnimation::source not loaded in Qt 6

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 6.2.3, 6.3.0 Alpha
    • 6.2.1
    • Lottie
    • None
    • 3399742b335b73156a0bc555fc3e820061070bd2 (qt/qtlottie/dev) d234a3c723848b256998a506db3ecdf9d7bf75ca (qt/qtlottie/6.2)

    Description

      Loading tests/manual/testApp in Qt 6 only shows a blank canvas. This is because the status of LottieAnimation is Error after loading.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kkohne Kai Köhne
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes