Fix loading of LottieAnimation::source

QQmlFile seems to expect an absolute URL here.

[ChangeLog] Fixed bug that prevented LottieAnimation
from loading its source from a relative URL.

Fixes: QTBUG-98794
Change-Id: I58f01d36a4108a0fa9e4d863eb9185a514bf14b4
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 3399742b335b73156a0bc555fc3e820061070bd2)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>